<resources>
    <string name="app_name">Inventory App</string>
    <string name="delete_all_product">Delete all product</string>
    <string name="add_dummy_data">Add dummy data</string>
    <string name="save">Save</string>
    <string name="successful_product_saving">Product saved</string>
    <string name="dummy_save_failed">Failed saving DummyData</string>
    <string name="dummy_save_success">Dummy data saved</string>
    <string name="quantity">Quantity</string>
    <string name="_99_plchld">99</string>
    <string name="sell">Sell</string>
    <string name="edit_product">Edit product</string>
    <string name="update_success">Update successful!</string>
    <string name="unsaved_dialog_msg">There are some unsaved things! Do you want to discard or continue to edit?</string>
    <string name="discard_msg">Discard</string>
    <string name="keep_editing_msg">Keep editing</string>
    <string name="no_product_available">No product available</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="_0">0</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="hint_phone">e.g. 1234567890</string>
    <string name="hint_supplier">e.q. Supplier Steven</string>
    <string name="hint_quantity">e.g. 10</string>
    <string name="hint_price">e.g. 10</string>
    <string name="hint_name">e.g. Car</string>
    <string name="details">Details</string>
    <string name="colon_sign">:\u0020</string>
    <string name="dollar_sign">\u0020$</string>
    <string name="inc_dec_quantity">Increase/decrease quantity</string>
    <string name="call_the_supplier">Call the supplier</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete this item?</string>
    <string name="yes_">Yes</string>
    <string name="product_deleted">Product deleted</string>
    <string name="no__">No</string>
    <string name="remove_product">Remove product</string>
    <string name="add_product">Add product</string>
    <string name="delete_product">Delete product</string>
    <string name="call_supplier">Call supplier</string>
    <string name="edit_item">Edit item</string>
    <string name="colon_plus_text">:\u0020%1$s</string>
    <string name="colon_price_dollar">:\u0020%1$s\u0020$</string>
    <string name="you_cant_delete_x_product">You can\'t delete %1$d product!</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="you_can_add_new_product_using_the_add_button">You can add new product using the \'Add\' button</string>
    <string name="at_the_bottom_right_corner">at the bottom right corner!</string>
</resources>
