<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    tools:context=".EditActivity">

    <!-- Name edit field-->
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:id="@+id/name_editText"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Price edit filed -->
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/hint_price"
            android:text="@string/_0"
            android:inputType="numberDecimal"
            android:id="@+id/price_editText"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Quantity edit filed-->
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/hint_quantity"
            android:text="@string/_0"
            android:inputType="numberDecimal"
            android:id="@+id/quantity_editText"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Supplier name edit field -->
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/hint_supplier"
            android:inputType="textPersonName"
            android:id="@+id/supp_name_editText"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Supplier phone edit filed -->
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone"
            android:layout_width="match_parent" />

        <EditText
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:id="@+id/supp_phone_editText"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"/>


</LinearLayout>