<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"/>

        <TextView
            android:id="@+id/details_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"/>

        <TextView
            android:id="@+id/details_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>

        <TextView
            android:id="@+id/details_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car"/>

        <ImageButton
            android:id="@+id/details_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_exposure_neg_1_black_24"/>

        <ImageButton
            android:id="@+id/details_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_exposure_plus_1_black_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"/>

        <TextView
            android:id="@+id/details_product_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone"/>

        <TextView
            android:id="@+id/details_product_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/details_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete_forever_black_48"/>

    <ImageButton
        android:id="@+id/details_call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_call_black_48"/>


</LinearLayout>