<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:id="@+id/product_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Product name"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="end"
                    tools:text="Price" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/quantity" />

                <TextView
                    android:id="@+id/product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_99_plchld" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/product_sell_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="@string/sell"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <ImageButton
                    android:id="@+id/edit_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_edit_black_24"
                    android:contentDescription="@string/edit_item" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>